# DayTradeAI

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/daytradeai/: __init__.py  config.py  data.py  evaluate.py  main.py  policies.py  preprocess.py  stocks.py  util.py  visualize.py
src/notebooks/: eda.ipynb  simple_policies.ipynb
tests/: test_data.py
